--- a/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Support Vector Machine.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Support Vector Machine.ipynb
@@ -1,14 +1,311 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "# Import libraries"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "id": "49cef681f4aebf5c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:07.844654Z",
+     "start_time": "2023-08-15T02:28:06.889911Z"
+    }
+   },
+   "id": "c22ecf4271db9376"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Load data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f1e3e9bca320a1b2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   laufkont  laufzeit  moral  verw  hoehe  sparkont  beszeit  rate  famges  \\\n0         1        18      4     2   1049         1        2     4       2   \n1         1         9      4     0   2799         1        3     2       3   \n2         2        12      2     9    841         2        4     2       2   \n3         1        12      4     0   2122         1        3     3       3   \n4         1        12      4     0   2171         1        3     4       3   \n\n   buerge  ...  verm  alter  weitkred  wohn  bishkred  beruf  pers  telef  \\\n0       1  ...     2     21         3     1         1      3     2      1   \n1       1  ...     1     36         3     1         2      3     1      1   \n2       1  ...     1     23         3     1         1      2     2      1   \n3       1  ...     1     39         3     1         2      2     1      1   \n4       1  ...     2     38         1     2         2      2     2      1   \n\n   gastarb  kredit  \n0        2       1  \n1        2       1  \n2        2       1  \n3        1       1  \n4        1       1  \n\n[5 rows x 21 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>laufkont</th>\n      <th>laufzeit</th>\n      <th>moral</th>\n      <th>verw</th>\n      <th>hoehe</th>\n      <th>sparkont</th>\n      <th>beszeit</th>\n      <th>rate</th>\n      <th>famges</th>\n      <th>buerge</th>\n      <th>...</th>\n      <th>verm</th>\n      <th>alter</th>\n      <th>weitkred</th>\n      <th>wohn</th>\n      <th>bishkred</th>\n      <th>beruf</th>\n      <th>pers</th>\n      <th>telef</th>\n      <th>gastarb</th>\n      <th>kredit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>18</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1049</td>\n      <td>1</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>21</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>9</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2799</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>36</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n      <td>2</td>\n      <td>9</td>\n      <td>841</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>23</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2122</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>39</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2171</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>38</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_table('SouthGermanCredit.asc', sep=' ')\n",
+    "df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:07.890087700Z",
+     "start_time": "2023-08-15T02:28:07.848675800Z"
+    }
+   },
+   "id": "e095ad844019e9f3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Build a SVM model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b870a06928370419"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.531314800Z",
+     "start_time": "2023-08-15T02:28:07.894649200Z"
+    }
+   },
+   "id": "b532b27b0421d430"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "543924f2b95ca450"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "targetColName = 'kredit'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.548317600Z",
+     "start_time": "2023-08-15T02:28:09.534317200Z"
+    }
+   },
+   "id": "f7d39a206f5b1c39"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.574591Z",
+     "start_time": "2023-08-15T02:28:09.549318700Z"
+    }
+   },
+   "id": "cfe97c42ea9ba59d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "X = df.drop([targetColName], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.617541600Z",
+     "start_time": "2023-08-15T02:28:09.566845600Z"
+    }
+   },
+   "id": "4175f6bb17e709ac"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "y = df[targetColName] "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.645217400Z",
+     "start_time": "2023-08-15T02:28:09.580420600Z"
+    }
+   },
+   "id": "15f9e91e6c812e4b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.645217400Z",
+     "start_time": "2023-08-15T02:28:09.609911100Z"
+    }
+   },
+   "id": "a18a5edbc2f0cae6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "# Function to test each column\n",
+    "def test_column(col):\n",
+    "    model = SVC(kernel='linear', C = 1e5)\n",
+    "    model.fit(X_train[col].to_frame(), y_train)\n",
+    "    y_pred = model.predict(X_test[col].to_frame())\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.646213600Z",
+     "start_time": "2023-08-15T02:28:09.617541600Z"
+    }
+   },
+   "id": "14c151b25fb09203"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "def test_columns(cols):\n",
+    "    model = SVC(kernel='linear', C = 1e5)\n",
+    "    model.fit(X_train[cols], y_train)\n",
+    "    y_pred = model.predict(X_test[cols])\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.646213600Z",
+     "start_time": "2023-08-15T02:28:09.631590200Z"
+    }
+   },
+   "id": "ce30c5e83946d355"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "def test_all():\n",
+    "    model = SVC(kernel='linear', C = 1e5)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.664215600Z",
+     "start_time": "2023-08-15T02:28:09.646213600Z"
+    }
+   },
+   "id": "63cea36354ae8cf4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# Test each column\n",
+    "# for column in X_train.columns:\n",
+    "#     print(column, test_column(column))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.697973600Z",
+     "start_time": "2023-08-15T02:28:09.661217900Z"
+    }
+   },
+   "id": "923861700b0cf224"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "# Test columns in pairs\n",
+    "# for col1 in X_train.columns:\n",
+    "#     for col2 in X_train.columns:\n",
+    "#         if col1 < col2:\n",
+    "#             print(col1, col2, test_columns([col1, col2]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:28:09.697973600Z",
+     "start_time": "2023-08-15T02:28:09.676333200Z"
+    }
+   },
+   "id": "630b68f0dd2c36a4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.785"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy of all columns\n",
+    "test_all()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:35:09.309162300Z",
+     "start_time": "2023-08-15T02:28:09.690995900Z"
+    }
+   },
+   "id": "3579024094518a7f"
   }
  ],
  "metadata": {
